--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ license="GPL3"
 [[mods]]
 modId="nzgmaddon"
 version="1.0.0"
-displayName="NineZero's Gun Mod Addon"
+displayName="NineZero's Gun Expansion"
 updateJSONURL=""
 displayURL=""
 logoFile="nzgmaddon_icon.png"
