Updated .gitignore, build.gradle, and simplified init imports in nzgmAddon.java.

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 version = '1.19.2-1.1.1'
-group = 'yourname.modid' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = 'com.yourname.modid' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'nzgExpansion'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
