--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,10 +4,10 @@ license="GPL3"
 
 [[mods]]
 modId="nzgmaddon"
-version="1.1.2"
+version="1.1.3"
 displayName="NineZero's Gun Expansion"
 updateJSONURL=""
-displayURL=""
+displayURL="https://www.curseforge.com/minecraft/mc-mods/ninezeros-gun-expansion"
 logoFile="nzgmaddon_banner.png"
 authors="zaeonNineZero"
 description='''
