--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -10,32 +10,30 @@ updateJSONURL=""
 displayURL="https://www.curseforge.com/minecraft/mc-mods/ninezeros-gun-expansion"
 logoFile="nzgexpansion_banner.png"
 authors="zaeonNineZero"
-description='''
-An addon for MrCrayfish's Gun Mod, adding additional weapons and attachments in an aesthetically simple style.
-'''
+description="An addon for MrCrayfish's Gun Mod, adding additional weapons and attachments in an aesthetically simple style."
 
 [[dependencies.nzgexpansion]]
     modId="forge"
     mandatory=true
-    versionRange="[44.0.0,)"
+    versionRange="[44.1.0,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.nzgexpansion]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.19.3,1.20)"
+    versionRange="[1.19.4,1.20)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.nzgexpansion]]
     modId="framework"
     mandatory=true
-    versionRange="[0.4.2,)"
+    versionRange="[0.6.16,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.nzgexpansion]]
     modId="cgm"
     mandatory=true
-    versionRange="[1.3.4,)"
+    versionRange="[1.3.5,)"
     ordering="AFTER"
     side="BOTH"
 
