--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,6 @@ runGameTestServer.launch
 runServer.launch
 
 # Misc
-cgm-1.3.3-1.18.2.jar
+cgm-1.0.1-1.16.3.jar
+obfuscate-0.6.2-1.16.3.jar
 SourceTree.lnk
