--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[40,)"
+loaderVersion="[32,)"
 license="GPL3"
 
 [[mods]]
@@ -10,32 +10,30 @@ updateJSONURL=""
 displayURL="https://www.curseforge.com/minecraft/mc-mods/ninezeros-gun-expansion"
 logoFile="nzgexpansion_banner.png"
 authors="zaeonNineZero"
-description='''
-An addon for MrCrayfish's Gun Mod, adding additional weapons and attachments in an aesthetically simple style.
-'''
+description="An addon for MrCrayfish's Gun Mod, adding additional weapons and attachments in an aesthetically simple style."
 
 [[dependencies.nzgexpansion]]
     modId="forge"
     mandatory=true
-    versionRange="[40.2.0,)"
+    versionRange="[32,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.nzgexpansion]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.18.2,1.19)"
+    versionRange="[1.16.5,1.17)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.nzgexpansion]]
-    modId="framework"
+    modId="obfuscate"
     mandatory=true
-    versionRange="[0.4.2,)"
+    versionRange="[0.6.0,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.nzgexpansion]]
     modId="cgm"
     mandatory=true
-    versionRange="[1.3.3,)"
+    versionRange="[1.2.6,)"
     ordering="AFTER"
     side="BOTH"
 
