--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,14 +4,14 @@ license="GPL3"
 
 [[mods]]
 modId="nzgmaddon"
-version="1.3.2"
-displayName="NineZero's Gun Expansion"
+version="1.4.0"
+displayName="NineZero's Gun Expansion (Pre-Release ver.)"
 updateJSONURL=""
 displayURL="https://www.curseforge.com/minecraft/mc-mods/ninezeros-gun-expansion"
 logoFile="nzgexpansion_banner.png"
 authors="zaeonNineZero"
 description='''
-An addon for MrCrayfish's Gun Mod, adding additional weapons and attachments in an aesthetically simple style.
+An addon for MrCrayfish's Gun Mod, adding additional weapons and attachments in an aesthetically simple style. (Pre-Release ver.)
 '''
 
 [[dependencies.nzgmaddon]]
