Updated Changelog, build.gradle, and mods.toml. Aiming for release of v1.4.0 for MC 1.19.2 on April 15th.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,13 +5,13 @@ license="GPL3"
 [[mods]]
 modId="nzgmaddon"
 version="1.4.0"
-displayName="NineZero's Gun Expansion (Pre-Release ver.)"
+displayName="NineZero's Gun Expansion"
 updateJSONURL=""
 displayURL="https://www.curseforge.com/minecraft/mc-mods/ninezeros-gun-expansion"
 logoFile="nzgexpansion_banner.png"
 authors="zaeonNineZero"
 description='''
-An addon for MrCrayfish's Gun Mod, adding additional weapons and attachments in an aesthetically simple style. (Pre-Release ver.)
+An addon for MrCrayfish's Gun Mod, adding additional weapons and attachments in an aesthetically simple style.
 '''
 
 [[dependencies.nzgmaddon]]
