--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ license="GPL3"
 [[mods]]
 modId="nzgmaddon"
 version="1.4.99"
-displayName="NineZero's Gun Expansion (Development Branch)"
+displayName="NineZero's Gun Expansion (Dev. Branch)"
 updateJSONURL=""
 displayURL="https://www.curseforge.com/minecraft/mc-mods/ninezeros-gun-expansion"
 logoFile="nzgexpansion_banner.png"
