Hooked up multiple gun model overrides to CGM Expanded's common animation system, allowing for custom animations to play when firing and reloading. Several new sounds for the new sound parameters in CGM Expanded. Reduced the volume of the cock sounds for the Sniper Rifle and Bolt Action Rifle. Updated gitignore.
The fork now compiles using CGM Expanded instead of base CGM, but theoretically should be backwards compatible.

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,7 @@ runGameTestServer.launch
 runServer.launch
 
 # Misc
+deprecated_builds/*
 cgm-1.3.4-1.19.2.jar
+cgm-expanded-fork-1.19.2.jar
 SourceTree.lnk
