--- a/build.gradle
+++ b/build.gradle
@@ -143,7 +143,7 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 	
-    implementation files('cgm-1.3.4-1.19.2.jar')
+    implementation files('cgm-expanded-fork-1.19.2.jar')
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
